# openocd-libswd

./: Makefile.am  TODO  bootstrap  common.mk  configure.in  configure.sh
src/: Makefile.am  openocd.c
src/helper/: types.h
src/interface/: Makefile.am  bitbang.c  bitbang.h  interface.c  interface.h
src/jtag/: adapter.c  core.c  interface.h  interfaces.c
src/jtag/drivers/: ft2232.c
src/transport/: Makefile.am  swd.c  swd.h  swd_core.c  swd_libswd_drv_openocd.c  swd_tcl.c  transport.c  transport.h
submodules/: README
tcl/interface/: kt-link-swd-bbv2.cfg  kt-link-swd.cfg
testing/: pointertest.c
